# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: general.yaml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: api.rs  health_check.rs
