[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = { version = "1", features = ["derive"]}
config = "0.13.3"
uuid = {version = "1.2.2", features = ["v4"]}
chrono = {version = "0.4.23", default-features = false, features = ["clock"] }
env_logger = "0.10.0"

[dependencies.sqlx] 
version = "0.6" 
default-features = false 
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.13"

